--- a/RollBot/RollBot.csproj
+++ b/RollBot/RollBot.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Roll.cs" />
     <Compile Include="RollBot.cs" />
   </ItemGroup>
   <ItemGroup>
